quantum/plugins/ir_lang/generated/XACCLangParser.cpp

// Generated from XACCLang.g4 by ANTLR 4.7.2


#include "XACCLangListener.h"

#include "XACCLangParser.h"


using namespace antlrcpp;
using namespace xacclang;
using namespace antlr4;

XACCLangParser::XACCLangParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

XACCLangParser::~XACCLangParser() {
  delete _interpreter;
}

std::string XACCLangParser::getGrammarFileName() const {
  return "XACCLang.g4";
}

const std::vector<std::string>& XACCLangParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& XACCLangParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- XaccsrcContext ------------------------------------------------------------------

XACCLangParser::XaccsrcContext::XaccsrcContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<XACCLangParser::XacckernelContext *> XACCLangParser::XaccsrcContext::xacckernel() {
  return getRuleContexts<XACCLangParser::XacckernelContext>();
}

XACCLangParser::XacckernelContext* XACCLangParser::XaccsrcContext::xacckernel(size_t i) {
  return getRuleContext<XACCLangParser::XacckernelContext>(i);
}


size_t XACCLangParser::XaccsrcContext::getRuleIndex() const {
  return XACCLangParser::RuleXaccsrc;
}

void XACCLangParser::XaccsrcContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<XACCLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterXaccsrc(this);
}

void XACCLangParser::XaccsrcContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<XACCLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitXaccsrc(this);
}

XACCLangParser::XaccsrcContext* XACCLangParser::xaccsrc() {
  XaccsrcContext *_localctx = _tracker.createInstance<XaccsrcContext>(_ctx, getState());
  enterRule(_localctx, 0, XACCLangParser::RuleXaccsrc);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(47);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == XACCLangParser::T__0) {
      setState(44);
      xacckernel();
      setState(49);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- XacckernelContext ------------------------------------------------------------------

XACCLangParser::XacckernelContext::XacckernelContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

XACCLangParser::MainprogContext* XACCLangParser::XacckernelContext::mainprog() {
  return getRuleContext<XACCLangParser::MainprogContext>(0);
}

std::vector<XACCLangParser::IdContext *> XACCLangParser::XacckernelContext::id() {
  return getRuleContexts<XACCLangParser::IdContext>();
}

XACCLangParser::IdContext* XACCLangParser::XacckernelContext::id(size_t i) {
  return getRuleContext<XACCLangParser::IdContext>(i);
}

std::vector<XACCLangParser::TypedparamContext *> XACCLangParser::XacckernelContext::typedparam() {
  return getRuleContexts<XACCLangParser::TypedparamContext>();
}

XACCLangParser::TypedparamContext* XACCLangParser::XacckernelContext::typedparam(size_t i) {
  return getRuleContext<XACCLangParser::TypedparamContext>(i);
}


size_t XACCLangParser::XacckernelContext::getRuleIndex() const {
  return XACCLangParser::RuleXacckernel;
}

void XACCLangParser::XacckernelContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<XACCLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterXacckernel(this);
}

void XACCLangParser::XacckernelContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<XACCLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitXacckernel(this);
}

XACCLangParser::XacckernelContext* XACCLangParser::xacckernel() {
  XacckernelContext *_localctx = _tracker.createInstance<XacckernelContext>(_ctx, getState());
  enterRule(_localctx, 2, XACCLangParser::RuleXacckernel);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(50);
    match(XACCLangParser::T__0);
    setState(51);
    match(XACCLangParser::T__1);
    setState(52);
    dynamic_cast<XacckernelContext *>(_localctx)->kernelname = id();
    setState(53);
    match(XACCLangParser::T__2);
    setState(54);
    match(XACCLangParser::T__3);
    setState(55);
    dynamic_cast<XacckernelContext *>(_localctx)->acceleratorbuffer = id();
    setState(60);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == XACCLangParser::T__4) {
      setState(56);
      match(XACCLangParser::T__4);
      setState(57);
      typedparam();
      setState(62);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(63);
    match(XACCLangParser::T__5);
    setState(64);
    match(XACCLangParser::T__6);
    setState(65);
    mainprog();
    setState(66);
    match(XACCLangParser::T__7);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypedparamContext ------------------------------------------------------------------

XACCLangParser::TypedparamContext::TypedparamContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

XACCLangParser::TypeContext* XACCLangParser::TypedparamContext::type() {
  return getRuleContext<XACCLangParser::TypeContext>(0);
}

XACCLangParser::ParamContext* XACCLangParser::TypedparamContext::param() {
  return getRuleContext<XACCLangParser::ParamContext>(0);
}


size_t XACCLangParser::TypedparamContext::getRuleIndex() const {
  return XACCLangParser::RuleTypedparam;
}

void XACCLangParser::TypedparamContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<XACCLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterTypedparam(this);
}

void XACCLangParser::TypedparamContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<XACCLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitTypedparam(this);
}

XACCLangParser::TypedparamContext* XACCLangParser::typedparam() {
  TypedparamContext *_localctx = _tracker.createInstance<TypedparamContext>(_ctx, getState());
  enterRule(_localctx, 4, XACCLangParser::RuleTypedparam);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(68);
    type();
    setState(69);
    param();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- TypeContext ------------------------------------------------------------------

XACCLangParser::TypeContext::TypeContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t XACCLangParser::TypeContext::getRuleIndex() const {
  return XACCLangParser::RuleType;
}

void XACCLangParser::TypeContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<XACCLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterType(this);
}

void XACCLangParser::TypeContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<XACCLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitType(this);
}

XACCLangParser::TypeContext* XACCLangParser::type() {
  TypeContext *_localctx = _tracker.createInstance<TypeContext>(_ctx, getState());
  enterRule(_localctx, 6, XACCLangParser::RuleType);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(71);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << XACCLangParser::T__8)
      | (1ULL << XACCLangParser::T__9)
      | (1ULL << XACCLangParser::T__10))) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- KernelcallContext ------------------------------------------------------------------

XACCLangParser::KernelcallContext::KernelcallContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

XACCLangParser::IdContext* XACCLangParser::KernelcallContext::id() {
  return getRuleContext<XACCLangParser::IdContext>(0);
}

std::vector<XACCLangParser::ParamContext *> XACCLangParser::KernelcallContext::param() {
  return getRuleContexts<XACCLangParser::ParamContext>();
}

XACCLangParser::ParamContext* XACCLangParser::KernelcallContext::param(size_t i) {
  return getRuleContext<XACCLangParser::ParamContext>(i);
}


size_t XACCLangParser::KernelcallContext::getRuleIndex() const {
  return XACCLangParser::RuleKernelcall;
}

void XACCLangParser::KernelcallContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<XACCLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterKernelcall(this);
}

void XACCLangParser::KernelcallContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<XACCLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitKernelcall(this);
}

XACCLangParser::KernelcallContext* XACCLangParser::kernelcall() {
  KernelcallContext *_localctx = _tracker.createInstance<KernelcallContext>(_ctx, getState());
  enterRule(_localctx, 8, XACCLangParser::RuleKernelcall);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(73);
    dynamic_cast<KernelcallContext *>(_localctx)->kernelname = id();
    setState(74);
    match(XACCLangParser::T__2);
    setState(76);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == XACCLangParser::T__13

    || _la == XACCLangParser::ID) {
      setState(75);
      param();
    }
    setState(82);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == XACCLangParser::T__4) {
      setState(78);
      match(XACCLangParser::T__4);
      setState(79);
      param();
      setState(84);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(85);
    match(XACCLangParser::T__5);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MainprogContext ------------------------------------------------------------------

XACCLangParser::MainprogContext::MainprogContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

XACCLangParser::ProgramContext* XACCLangParser::MainprogContext::program() {
  return getRuleContext<XACCLangParser::ProgramContext>(0);
}


size_t XACCLangParser::MainprogContext::getRuleIndex() const {
  return XACCLangParser::RuleMainprog;
}

void XACCLangParser::MainprogContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<XACCLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMainprog(this);
}

void XACCLangParser::MainprogContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<XACCLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMainprog(this);
}

XACCLangParser::MainprogContext* XACCLangParser::mainprog() {
  MainprogContext *_localctx = _tracker.createInstance<MainprogContext>(_ctx, getState());
  enterRule(_localctx, 10, XACCLangParser::RuleMainprog);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(87);
    program();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ProgramContext ------------------------------------------------------------------

XACCLangParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<XACCLangParser::LineContext *> XACCLangParser::ProgramContext::line() {
  return getRuleContexts<XACCLangParser::LineContext>();
}

XACCLangParser::LineContext* XACCLangParser::ProgramContext::line(size_t i) {
  return getRuleContext<XACCLangParser::LineContext>(i);
}


size_t XACCLangParser::ProgramContext::getRuleIndex() const {
  return XACCLangParser::RuleProgram;
}

void XACCLangParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<XACCLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void XACCLangParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<XACCLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}

XACCLangParser::ProgramContext* XACCLangParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 12, XACCLangParser::RuleProgram);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(90); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(89);
      line();
      setState(92); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << XACCLangParser::T__12)
      | (1ULL << XACCLangParser::COMMENT)
      | (1ULL << XACCLangParser::ID))) != 0));
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- LineContext ------------------------------------------------------------------

XACCLangParser::LineContext::LineContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<XACCLangParser::StatementContext *> XACCLangParser::LineContext::statement() {
  return getRuleContexts<XACCLangParser::StatementContext>();
}

XACCLangParser::StatementContext* XACCLangParser::LineContext::statement(size_t i) {
  return getRuleContext<XACCLangParser::StatementContext>(i);
}

XACCLangParser::CommentContext* XACCLangParser::LineContext::comment() {
  return getRuleContext<XACCLangParser::CommentContext>(0);
}


size_t XACCLangParser::LineContext::getRuleIndex() const {
  return XACCLangParser::RuleLine;
}

void XACCLangParser::LineContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<XACCLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLine(this);
}

void XACCLangParser::LineContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<XACCLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLine(this);
}

XACCLangParser::LineContext* XACCLangParser::line() {
  LineContext *_localctx = _tracker.createInstance<LineContext>(_ctx, getState());
  enterRule(_localctx, 14, XACCLangParser::RuleLine);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    setState(100);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case XACCLangParser::T__12:
      case XACCLangParser::ID: {
        enterOuterAlt(_localctx, 1);
        setState(95); 
        _errHandler->sync(this);
        alt = 1;
        do {
          switch (alt) {
            case 1: {
                  setState(94);
                  statement();
                  break;
                }

          default:
            throw NoViableAltException(this);
          }
          setState(97); 
          _errHandler->sync(this);
          alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx);
        } while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER);
        break;
      }

      case XACCLangParser::COMMENT: {
        enterOuterAlt(_localctx, 2);
        setState(99);
        comment();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

XACCLangParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

XACCLangParser::UopContext* XACCLangParser::StatementContext::uop() {
  return getRuleContext<XACCLangParser::UopContext>(0);
}


size_t XACCLangParser::StatementContext::getRuleIndex() const {
  return XACCLangParser::RuleStatement;
}

void XACCLangParser::StatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<XACCLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterStatement(this);
}

void XACCLangParser::StatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<XACCLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitStatement(this);
}

XACCLangParser::StatementContext* XACCLangParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 16, XACCLangParser::RuleStatement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(107);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case XACCLangParser::ID: {
        enterOuterAlt(_localctx, 1);
        setState(102);
        uop();
        setState(103);
        match(XACCLangParser::T__11);
        break;
      }

      case XACCLangParser::T__12: {
        enterOuterAlt(_localctx, 2);
        setState(105);
        match(XACCLangParser::T__12);
        setState(106);
        match(XACCLangParser::T__11);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CommentContext ------------------------------------------------------------------

XACCLangParser::CommentContext::CommentContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* XACCLangParser::CommentContext::COMMENT() {
  return getToken(XACCLangParser::COMMENT, 0);
}


size_t XACCLangParser::CommentContext::getRuleIndex() const {
  return XACCLangParser::RuleComment;
}

void XACCLangParser::CommentContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<XACCLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterComment(this);
}

void XACCLangParser::CommentContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<XACCLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitComment(this);
}

XACCLangParser::CommentContext* XACCLangParser::comment() {
  CommentContext *_localctx = _tracker.createInstance<CommentContext>(_ctx, getState());
  enterRule(_localctx, 18, XACCLangParser::RuleComment);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(109);
    match(XACCLangParser::COMMENT);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParamlistContext ------------------------------------------------------------------

XACCLangParser::ParamlistContext::ParamlistContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

XACCLangParser::ParamContext* XACCLangParser::ParamlistContext::param() {
  return getRuleContext<XACCLangParser::ParamContext>(0);
}

XACCLangParser::ParamlistContext* XACCLangParser::ParamlistContext::paramlist() {
  return getRuleContext<XACCLangParser::ParamlistContext>(0);
}


size_t XACCLangParser::ParamlistContext::getRuleIndex() const {
  return XACCLangParser::RuleParamlist;
}

void XACCLangParser::ParamlistContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<XACCLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParamlist(this);
}

void XACCLangParser::ParamlistContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<XACCLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParamlist(this);
}

XACCLangParser::ParamlistContext* XACCLangParser::paramlist() {
  ParamlistContext *_localctx = _tracker.createInstance<ParamlistContext>(_ctx, getState());
  enterRule(_localctx, 20, XACCLangParser::RuleParamlist);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(111);
    param();
    setState(114);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 8, _ctx)) {
    case 1: {
      setState(112);
      match(XACCLangParser::T__4);
      setState(113);
      paramlist();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ParamContext ------------------------------------------------------------------

XACCLangParser::ParamContext::ParamContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

XACCLangParser::IdContext* XACCLangParser::ParamContext::id() {
  return getRuleContext<XACCLangParser::IdContext>(0);
}


size_t XACCLangParser::ParamContext::getRuleIndex() const {
  return XACCLangParser::RuleParam;
}

void XACCLangParser::ParamContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<XACCLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParam(this);
}

void XACCLangParser::ParamContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<XACCLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParam(this);
}

XACCLangParser::ParamContext* XACCLangParser::param() {
  ParamContext *_localctx = _tracker.createInstance<ParamContext>(_ctx, getState());
  enterRule(_localctx, 22, XACCLangParser::RuleParam);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(119);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case XACCLangParser::ID: {
        enterOuterAlt(_localctx, 1);
        setState(116);
        id();
        break;
      }

      case XACCLangParser::T__13: {
        enterOuterAlt(_localctx, 2);
        setState(117);
        match(XACCLangParser::T__13);
        setState(118);
        id();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- UopContext ------------------------------------------------------------------

XACCLangParser::UopContext::UopContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

XACCLangParser::GateContext* XACCLangParser::UopContext::gate() {
  return getRuleContext<XACCLangParser::GateContext>(0);
}

XACCLangParser::ExplistContext* XACCLangParser::UopContext::explist() {
  return getRuleContext<XACCLangParser::ExplistContext>(0);
}


size_t XACCLangParser::UopContext::getRuleIndex() const {
  return XACCLangParser::RuleUop;
}

void XACCLangParser::UopContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<XACCLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterUop(this);
}

void XACCLangParser::UopContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<XACCLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitUop(this);
}

XACCLangParser::UopContext* XACCLangParser::uop() {
  UopContext *_localctx = _tracker.createInstance<UopContext>(_ctx, getState());
  enterRule(_localctx, 24, XACCLangParser::RuleUop);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(121);
    dynamic_cast<UopContext *>(_localctx)->gatename = gate();
    setState(122);
    match(XACCLangParser::T__2);
    setState(124);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << XACCLangParser::T__2)
      | (1ULL << XACCLangParser::T__14)
      | (1ULL << XACCLangParser::T__16)
      | (1ULL << XACCLangParser::T__20)
      | (1ULL << XACCLangParser::T__24)
      | (1ULL << XACCLangParser::T__25)
      | (1ULL << XACCLangParser::T__26)
      | (1ULL << XACCLangParser::T__27)
      | (1ULL << XACCLangParser::T__28)
      | (1ULL << XACCLangParser::T__29)
      | (1ULL << XACCLangParser::ID)
      | (1ULL << XACCLangParser::REAL)
      | (1ULL << XACCLangParser::INT))) != 0)) {
      setState(123);
      explist();
    }
    setState(126);
    match(XACCLangParser::T__5);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- GateContext ------------------------------------------------------------------

XACCLangParser::GateContext::GateContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

XACCLangParser::IdContext* XACCLangParser::GateContext::id() {
  return getRuleContext<XACCLangParser::IdContext>(0);
}


size_t XACCLangParser::GateContext::getRuleIndex() const {
  return XACCLangParser::RuleGate;
}

void XACCLangParser::GateContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<XACCLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterGate(this);
}

void XACCLangParser::GateContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<XACCLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitGate(this);
}

XACCLangParser::GateContext* XACCLangParser::gate() {
  GateContext *_localctx = _tracker.createInstance<GateContext>(_ctx, getState());
  enterRule(_localctx, 26, XACCLangParser::RuleGate);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(128);
    id();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExplistContext ------------------------------------------------------------------

XACCLangParser::ExplistContext::ExplistContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<XACCLangParser::ExpContext *> XACCLangParser::ExplistContext::exp() {
  return getRuleContexts<XACCLangParser::ExpContext>();
}

XACCLangParser::ExpContext* XACCLangParser::ExplistContext::exp(size_t i) {
  return getRuleContext<XACCLangParser::ExpContext>(i);
}


size_t XACCLangParser::ExplistContext::getRuleIndex() const {
  return XACCLangParser::RuleExplist;
}

void XACCLangParser::ExplistContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<XACCLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExplist(this);
}

void XACCLangParser::ExplistContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<XACCLangListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExplist(this);
}

XACCLangParser::ExplistContext* XACCLangParser::explist() {
  ExplistContext *_localctx = _tracker.createInstance<ExplistContext>(_ctx, getState());
  enterRule(_localctx, 28, XACCLangParser::RuleExplist);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(130);
    exp(0);
    setState(135);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == XACCLangParser::T__4) {
      setState(131);
      match(XACCLangParser::T__4);
      setState(132);
      exp(0);
      setState(137);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExpContext ------------------------------------------------------------------

XACCLangParser::ExpContext::ExpContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

XACCLangParser::RealContext* XACCLangParser::ExpContext::real() {
  return getRuleContext<XACCLangParser::RealContext>(0);
}

tree::TerminalNode* XACCLangParser::ExpContext::INT() {
  return getToken(XACCLangParser::INT, 0);
}
